[chatgpt] ChatGPTHLIService: Minor code improvements
Signed-off-by: Florian Hotze <dev@florianhotze.com>